--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "tiva"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 description = "A tiny type-enforced validation system."
 license = "GPL-3.0-only"
+repository = "https://github.com/AdinAck/tiva"
